--- a/index.html
+++ b/index.html
@@ -69,6 +69,49 @@
                 </div>
             </div>
             <div class="container-2">
+                <div class="container-2-header">
+                    <h3 class="side-header">
+                        Freelancer
+                    </h3>
+                    <div class="header-II">
+                        <h5 class="h5-hII"> $</h5>
+                        <h4 class="h4-hII"> <span>99</span>/ year</h4>
+                    </div>
+                    <div class="header-III">
+                        <p class="header-III-p">
+                            Automatically renews after 1 year
+                        </p>
+                    </div>
+                    <div class="header-IV">
+                        <div class="header-IV-d">
+                            <img src="./images/Combined Shape.png" alt=""> 
+                            <p class="header-IV-p"> Use on 5 client site</p>
+                        </div>
+                        <div class="header-IV-d">
+                            <img src="./images/Combined Shape.png" alt=""> 
+                            <p class="header-IV-p"> Private repositories</p>
+                        </div>
+                        <div class="header-IV-d">
+                            <img src="./images/Combined Shape.png" alt=""> 
+                            <p class="header-IV-p"> Emali support</p>
+                        </div>
+                        <div class="header-VI">
+                            <p>
+                                Need 20 client sites? <br>Switch to the Agency plan.
+                            </p>
+                        </div>
+                        <div class="header-VII">
+                            <p>
+                                FTP is horrible to deal with. <span>WP Pusher </span>solves that issue, and the customer support is awesome!
+                            </p>
+                            <div class="header-vii">
+                                <img src="./images/Bitmap.png" alt="">
+                                <h5> Kirk Beard</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
  
