--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="">Learn more</a>
                 <a href="">Pricing</a>
                 <a href="">Help</a>
-                <a href="">Account</a>
+                <a href="" style="border: 2px solid grey; border-radius: 5px; padding: 5px; ">Account</a>
             </nav>
         </div>
 
@@ -110,11 +110,11 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
- 
+        </div>
+        <div class="section-footer">
+            <p> © 2018 WP Pusher IVS  · <span style="color:#31708F;;">Terms of Service</span> </p>
         </div>
     </div>
 </body>
